--- a/public/styles.css
+++ b/public/styles.css
@@ -21,3 +21,21 @@ body {
   display: flex;
   flex-direction: column;
 }
+
+header,
+footer {
+  background-color: #2b2b2b;
+  text-align: center;
+  color: white;
+}
+header h1 {
+  text-align: center;
+  padding: 0.5rem;
+  margin: 0;
+  font-size: clamp(1.2rem, 3vw, 2rem);
+}
+footer p {
+  margin: 0;
+  padding: 0.3rem;
+  font-size: clamp(0.8rem, 1.5vw, 1rem);
+}
