--- a/public/styles.css
+++ b/public/styles.css
@@ -39,3 +39,23 @@ footer p {
   padding: 0.3rem;
   font-size: clamp(0.8rem, 1.5vw, 1rem);
 }
+
+main {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
+}
+
+.task-input {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas:
+    "new-task priority"
+    "due-date add-btn";
+  gap: 0.5rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  background-color: #2b2b2b;
+  border-radius: 5px;
+}
