--- a/public/styles.css
+++ b/public/styles.css
@@ -102,10 +102,25 @@ main {
 .due-date-input {
   grid-area: due-date;
 }
-
 .add-task-btn {
   grid-area: add-btn;
   cursor: pointer;
   color: white;
   font-size: clamp(0.8rem, 2vw, 1.2rem);
+}
+
+.task-list {
+  flex: 1;
+  background-color: #2b2b2b;
+  padding: 1rem;
+  border-radius: 5px;
+  overflow-y: auto;
+}
+.task-list h2 {
+  margin-top: 0;
+  text-align: center;
+  border: 1px solid #b0b0b0;
+  border-radius: 5px;
+  color: white;
+  background: radial-gradient(circle, #383838, #828282);
 }
