--- a/public/styles.css
+++ b/public/styles.css
@@ -124,3 +124,31 @@ main {
   color: white;
   background: radial-gradient(circle, #383838, #828282);
 }
+
+.sort-count {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  gap: 2rem;
+  font-size: clamp(0.8rem, 2vw, 1rem);
+  margin: 0.5rem 0;
+  padding: 0.2rem 1rem;
+  border: 1px solid #b0b0b0;
+  border-radius: 5px;
+}
+.sort-count label {
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+#sortById,
+#sortByPriority {
+  transform: scale(1.3);
+}
+.total {
+  margin-right: auto;
+}
+
+.task-list ul {
+  list-style: none;
+}
