--- a/public/styles.css
+++ b/public/styles.css
@@ -27,6 +27,7 @@ footer {
   background-color: #2b2b2b;
   text-align: center;
   color: white;
+  user-select: none;
 }
 header h1 {
   text-align: center;
@@ -81,6 +82,7 @@ main {
   width: 100%;
   text-align: center;
   border-radius: 3px;
+  user-select: none;
 }
 .new-task-input input,
 .priority-input select,
@@ -107,6 +109,7 @@ main {
   cursor: pointer;
   color: white;
   font-size: clamp(0.8rem, 2vw, 1.2rem);
+  user-select: none;
 }
 
 .task-list {
@@ -123,23 +126,25 @@ main {
   border-radius: 5px;
   color: white;
   background: radial-gradient(circle, #383838, #828282);
+  user-select: none;
 }
 
 .sort-count {
-  display: flex;
-  justify-content: right;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr auto;
   gap: 2rem;
   font-size: clamp(0.8rem, 2vw, 1rem);
   margin: 0.5rem 0;
   padding: 0.2rem 1rem;
   border: 1px solid #b0b0b0;
   border-radius: 5px;
+  user-select: none;
 }
 .sort-count label {
   display: flex;
   align-items: center;
   gap: 0.4rem;
+  justify-content: right;
 }
 #sortById,
 #sortByPriority {
@@ -152,6 +157,7 @@ main {
 
 .task-list ul {
   list-style: none;
+  padding: 0 2rem 0 2rem;
 }
 
 .task-list li {
@@ -160,8 +166,8 @@ main {
   padding: 0.5rem;
   border-radius: 5px;
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: center;
   gap: 0.5rem;
 }
 
@@ -169,16 +175,39 @@ main {
   transform: scale(1.3);
   cursor: pointer;
 }
-
-.task-id {
-  font-size: clamp(0.8rem, 2vw, 1rem);
-  margin: 0.5rem auto 0.5rem 0;
+.task-deadline,
+.task-id,
+.task-priority {
+  font-size: clamp(0.7rem, 2vw, 1rem);
+  margin: 0.3rem 0 0.3rem 0;
   border: 1px solid #b0b0b0;
   border-radius: 5px;
   background: radial-gradient(circle, #383838, #828282);
-  width: 3rem;
+  min-width: 7rem;
   height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
+  user-select: none;
+}
+.task-id {
+  min-width: 2.5rem;
+}
+.task-priority {
+  min-width: 5rem;
+}
+.task-text {
+  font-size: clamp(0.7rem, 2vw, 1.2rem);
+  margin: 0.3rem auto 0.3rem 0;
+}
+.deleteBtn {
+  padding: 0.3rem 0.6rem;
+  font-size: clamp(0.7rem, 2vw, 1rem);
+  background-color: #580d0d;
+  color: white;
+  border: none;
+  height: 2rem;
+  border-radius: 5px;
+  cursor: pointer;
+  user-select: none;
 }
