--- a/public/styles.css
+++ b/public/styles.css
@@ -53,7 +53,8 @@ main {
   grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "new-task priority"
-    "due-date add-btn";
+    "due-date category"
+    "add-btn add-btn";
   gap: 0.5rem;
   margin-bottom: 1rem;
   padding: 1rem;
@@ -64,6 +65,7 @@ main {
 .new-task-input,
 .priority-input,
 .due-date-input,
+.category-input,
 .add-task-btn {
   font-size: clamp(0.8rem, 2vw, 1.1rem);
   padding: 0.3rem;
@@ -73,7 +75,8 @@ main {
 }
 .new-task-input label,
 .priority-input label,
-.due-date-input label {
+.due-date-input label,
+.category-input label {
   display: block;
   margin-bottom: 0.2rem;
   justify-self: center;
@@ -86,7 +89,8 @@ main {
 }
 .new-task-input input,
 .priority-input select,
-.due-date-input input {
+.due-date-input input,
+.category-input select {
   width: 100%;
   padding: 0.3rem;
   font-size: clamp(0.8rem, 2vw, 1.2rem);
@@ -103,6 +107,9 @@ main {
 }
 .due-date-input {
   grid-area: due-date;
+}
+.category-input {
+  grid-area: category;
 }
 .add-task-btn {
   grid-area: add-btn;
@@ -131,7 +138,7 @@ main {
 
 .sort-count {
   display: grid;
-  grid-template-columns: 1fr 1fr auto;
+  grid-template-columns: 1fr auto auto auto;
   gap: 2rem;
   font-size: clamp(0.8rem, 2vw, 1rem);
   margin: 0.5rem 0;
@@ -147,7 +154,8 @@ main {
   justify-content: right;
 }
 #sortById,
-#sortByPriority {
+#sortByPriority,
+#sortByCategory {
   transform: scale(1.3);
   cursor: pointer;
 }
@@ -197,9 +205,12 @@ main {
 .task-priority {
   min-width: 5rem;
 }
+.task-category {
+  min-width: 7rem;
+}
 .task-text {
   font-size: clamp(0.7rem, 2vw, 1.2rem);
-  margin: 0.3rem auto 0.3rem 0;
+  margin: 0.3rem auto 0.3rem 0.3rem;
 }
 .deleteBtn {
   padding: 0.3rem 0.6rem;
