--- a/public/styles.css
+++ b/public/styles.css
@@ -223,3 +223,21 @@ main {
   cursor: pointer;
   user-select: none;
 }
+
+#notification {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #333;
+  color: white;
+  padding: 0.8rem 1rem;
+  border-radius: 5px;
+  z-index: 1000;
+  user-select: none;
+  font-size: clamp(1rem, 3vw, 1.5rem);
+}
+
+.show-notification {
+  display: none;
+}
