--- a/public/styles.css
+++ b/public/styles.css
@@ -179,6 +179,20 @@ main {
   gap: 0.5rem;
 }
 
+.task-list li.one-day-left {
+  border: 2px solid #b0b0b0;
+  animation: glow-pulse 1.5s ease-in-out infinite;
+}
+@keyframes glow-pulse {
+  0%,
+  100% {
+    box-shadow: 0 0 2px #b0b0b0, 0 0 2px #b0b0b0;
+  }
+  50% {
+    box-shadow: 0 0 8px #b0b0b0, 0 0 8px #b0b0b0;
+  }
+}
+
 .done-checkbox {
   transform: scale(1.3);
   cursor: pointer;
@@ -192,7 +206,7 @@ main {
   border: 1px solid #b0b0b0;
   border-radius: 5px;
   background: radial-gradient(circle, #383838, #828282);
-  min-width: 7rem;
+  min-width: 10rem;
   height: 2rem;
   display: flex;
   justify-content: center;
@@ -229,7 +243,7 @@ main {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background: #333;
+  background: #383838;
   color: white;
   padding: 0.8rem 1rem;
   border-radius: 5px;
