--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,7 @@ html {
 body {
   min-height: 100%;
   margin: 0;
-  font-family: Helvetica, Arial, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 1.6;
   font-size: clamp(0.8rem, 2vw, 1rem);
   background-color: #3c3c3c;
@@ -21,43 +21,66 @@ body {
   display: flex;
   flex-direction: column;
 }
-
+header {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-template-areas:
+    "logo h1"
+    "logo h4";
+  background: linear-gradient(#ddd0c2, #4c4c4c);
+}
 header,
 footer {
   background-color: #2b2b2b;
-  text-align: center;
   color: white;
   user-select: none;
 }
-
-header h1 {
-  margin: 0;
-  padding: 0.5rem 0.5rem 0 0.5rem;
-  font-size: clamp(1.2rem, 3vw, 2rem);
+.logo-img {
+  grid-area: logo;
+  padding: 0.5rem;
+  align-self: center;
+  animation: rotate-logo 20s linear infinite;
 }
-header h3 {
+@keyframes rotate-logo {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+header h1 {
+  grid-area: h1;
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
   margin: 0;
-  padding-bottom: 0.5rem;
-  font-size: clamp(0.9rem, 2.5vw, 1.2rem);
+  padding: 0 2rem;
+  align-self: flex-end;
+}
+header h4 {
+  grid-area: h4;
+  font-size: clamp(1rem, 3vw, 1.5rem);
+  margin: 0;
+  padding: 0 2rem;
+  align-self: flex-start;
 }
 .nav {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 1.5rem;
+  gap: 2.5rem;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   position: sticky;
   top: 0;
-  background-color: #2b2b2b;
+  background-color: #4c4c4c;
   z-index: 100;
 }
 .nav a {
   color: white;
   text-decoration: none;
   font-size: clamp(0.8rem, 2vw, 1rem);
-  padding: 0.2rem 0.6rem;
-  border: 1px solid #4c4c4c;
+  padding: 0.1rem 0.6rem;
+  border: 1px solid #b0b0b0;
   border-radius: 5px;
   transition: box-shadow 0.3s;
 }
@@ -311,6 +334,12 @@ main {
   padding: 2rem;
   border-radius: 5px;
   margin: 1rem auto;
+}
+
+.about-h1 {
+  text-align: left;
+  color: white;
+  padding-top: 3rem;
 }
 
 .about-content h2 {
