--- a/public/styles.css
+++ b/public/styles.css
@@ -15,7 +15,7 @@ body {
   margin: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   line-height: 1.6;
-  font-size: clamp(0.8rem, 2vw, 1rem);
+  font-size: clamp(0.9rem, 2vw, 1rem);
   background-color: #3c3c3c;
   color: white;
   display: flex;
@@ -28,12 +28,16 @@ header {
     "logo h1"
     "logo h4";
   background: linear-gradient(#ddd0c2, #4c4c4c);
+  padding: 0.5rem 0.5rem 0 0.5rem;
 }
 header,
 footer {
   background-color: #2b2b2b;
   color: white;
   user-select: none;
+}
+footer {
+  text-align: center;
 }
 .logo-img {
   grid-area: logo;
@@ -62,30 +66,48 @@ header h4 {
   margin: 0;
   padding: 0 2rem;
   align-self: flex-start;
+  animation: slide-in 2s ease-out;
 }
+@keyframes slide-in {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
 .nav {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 2.5rem;
+  gap: 5rem;
   padding: 0.5rem;
   margin-bottom: 0.5rem;
   position: sticky;
   top: 0;
   background-color: #4c4c4c;
   z-index: 100;
+  user-select: none;
+  border: 1px solid #6f6f6f8d;
+  box-shadow: 0 0 2px #000000;
 }
 .nav a {
   color: white;
   text-decoration: none;
   font-size: clamp(0.8rem, 2vw, 1rem);
   padding: 0.1rem 0.6rem;
-  border: 1px solid #b0b0b0;
   border-radius: 5px;
   transition: box-shadow 0.3s;
+  border: 1.5px solid #b0b0b0;
+  background-color: #676767;
+  box-shadow: 0 0 2px #000000;
 }
 .nav a:hover {
-  box-shadow: 0 0 5px #dfdfdf;
+  box-shadow: 0 0 5px #ffffff;
+  border: 1.5px solid #e6e6e6;
 }
 footer p {
   margin: 0;
@@ -113,6 +135,7 @@ main {
   background-color: #2b2b2b;
   border-radius: 5px;
   scroll-margin-top: 4rem;
+  box-shadow: 0 0 5px #b0b0b0b4;
 }
 
 .new-task-input,
@@ -120,7 +143,7 @@ main {
 .due-date-input,
 .category-input,
 .add-task-btn {
-  font-size: clamp(0.8rem, 2vw, 1.1rem);
+  font-size: clamp(0.8rem, 2vw, 1rem);
   padding: 0.3rem;
   background-color: #3c3c3c;
   border: 1px solid #b0b0b0;
@@ -172,9 +195,14 @@ main {
   font-size: clamp(0.8rem, 2vw, 1.2rem);
   user-select: none;
   transition: background-color 0.3s;
+  border: 1.5px solid #b0b0b0;
+  background-color: #676767;
+  box-shadow: 0 0 2px #000000;
 }
+
 .add-task-btn:hover {
-  background-color: #4c4c4c;
+  box-shadow: 0 0 5px #ffffff;
+  border: 1.5px solid #e6e6e6;
 }
 
 .task-list {
@@ -184,6 +212,7 @@ main {
   border-radius: 5px;
   overflow-y: auto;
   scroll-margin-top: 4rem;
+  box-shadow: 0 0 5px #b0b0b0b4;
 }
 .task-list h2 {
   margin-top: 0;
@@ -202,7 +231,7 @@ main {
   font-size: clamp(0.8rem, 2vw, 1rem);
   margin: 0.5rem 0;
   padding: 0.2rem 1rem;
-  border: 1px solid #b0b0b0;
+  border: 2px solid #b0b0b0;
   border-radius: 5px;
   user-select: none;
 }
@@ -236,6 +265,7 @@ main {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
+  box-shadow: 0 0 2px #b0b0b0b4;
 }
 
 .task-list li.one-day-left {
@@ -248,21 +278,21 @@ main {
     box-shadow: 0 0 2px #b0b0b0, 0 0 2px #b0b0b0;
   }
   50% {
-    box-shadow: 0 0 10px #b0b0b0, 0 0 10px #b0b0b0;
+    box-shadow: 0 0 7px #b0b0b0, 0 0 7px #b0b0b0;
   }
 }
 
 .task-list li.one-hour-left {
-  border: 2px solid #ca0000;
+  border: 2px solid red;
   animation: red-glow-pulse 1.5s ease-in-out infinite;
 }
 @keyframes red-glow-pulse {
   0%,
   100% {
-    box-shadow: 0 0 2px #ca0000, 0 0 2px #ca0000;
+    box-shadow: 0 0 2px red, 0 0 2px red;
   }
   50% {
-    box-shadow: 0 0 10px #ca0000, 0 0 10px #ca0000;
+    box-shadow: 0 0 7px red, 0 0 7px red;
   }
 }
 
@@ -276,24 +306,25 @@ main {
 .task-category {
   font-size: clamp(0.7rem, 2vw, 1rem);
   margin: 0.3rem 0 0.3rem 0;
-  border: 1px solid #b0b0b0;
+  background-color: #4c4c4c;
   border-radius: 5px;
-  background: radial-gradient(circle, #383838, #828282);
-  min-width: 10rem;
+  border: 0.1px solid #676767;
+  min-width: 9rem;
   height: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
   user-select: none;
+  box-shadow: 0 0 2px #000000;
 }
 .task-id {
-  min-width: 2.5rem;
+  min-width: 2rem;
 }
 .task-priority {
-  min-width: 5rem;
+  min-width: 4.5rem;
 }
 .task-category {
-  min-width: 7rem;
+  min-width: 6rem;
 }
 .task-text {
   font-size: clamp(0.7rem, 2vw, 1.2rem);
@@ -302,13 +333,21 @@ main {
 .deleteBtn {
   padding: 0.3rem 0.6rem;
   font-size: clamp(0.7rem, 2vw, 1rem);
-  background-color: #580d0d;
-  color: white;
-  border: none;
+  color:#232323;
+  font-weight: bold;
   height: 2rem;
   border-radius: 5px;
   cursor: pointer;
   user-select: none;
+  transition: box-shadow 0.3s;
+  border: 1.5px solid #b0b0b0;
+  background-color: #676767;
+  box-shadow: 0 0 2px #000000;
+}
+.deleteBtn:hover {
+  box-shadow: 0 0 4px #ffffff;
+  border: 1.5px solid #e6e6e6;
+  color: white;
 }
 
 #notification {
