--- a/public/styles.css
+++ b/public/styles.css
@@ -309,7 +309,7 @@ main {
   min-width: 4.5rem;
 }
 .task-category {
-  min-width: 6rem;
+  min-width: 6.5rem;
 }
 .task-text {
   font-size: clamp(0.7rem, 2vw, 1.2rem);
@@ -526,5 +526,48 @@ main {
     color: #2b2b2b;
     border: 1px solid #2b2b2b;
     box-shadow: 0 0 5px #2b2b2b;
+  }
+}
+
+@media (max-width: 768px) {
+  .task-list ul {
+    padding: 0 0.5rem;
+  }
+  .task-list li {
+    flex-wrap: wrap;
+  }
+  .done-checkbox {
+    order: 1;
+  }
+  .task-text {
+    order: 3;
+    flex: 1;
+    min-width: 15rem;
+  }
+  .deleteBtn {
+    order: 4;
+  }
+  .task-id {
+    order: 2;
+  }
+  .task-priority {
+    order: 5;
+  }
+  .task-category {
+    order: 6;
+  }
+  .task-deadline {
+    order: 7;
+  }
+  .sort-count {
+    grid-template-columns: 1fr 1fr;
+    gap: 0.5rem;
+    padding: 0.5rem;
+  }
+  .sort-count label {
+    justify-content: left;
+  }
+  .nav {
+    gap: 3rem;
   }
 }
