--- a/public/styles.css
+++ b/public/styles.css
@@ -91,7 +91,7 @@ footer {
   box-shadow: 0 0 2px #000000;
 }
 .nav a {
-  color: white;
+  color: #000000;
   text-decoration: none;
   font-size: clamp(0.8rem, 2vw, 1rem);
   padding: 0.1rem 0.6rem;
@@ -104,6 +104,7 @@ footer {
 .nav a:hover {
   box-shadow: 0 0 5px #ffffff;
   border: 1.5px solid #e6e6e6;
+  color: white;
 }
 footer p {
   margin: 0;
@@ -184,17 +185,18 @@ main {
   grid-area: add-btn;
   padding: 0.5rem 1rem;
   cursor: pointer;
-  color: white;
+  color: #000000;
   font-size: clamp(0.8rem, 2vw, 1.2rem);
   user-select: none;
-  transition: background-color 0.3s;
   border: 1.5px solid #b0b0b0;
   background-color: #676767;
   box-shadow: 0 0 2px #000000;
+  transition: box-shadow 0.3s;
 }
 .add-task-btn:hover {
   box-shadow: 0 0 5px #ffffff;
   border: 1.5px solid #e6e6e6;
+  color: white;
 }
 .task-list {
   flex: 1;
@@ -256,30 +258,12 @@ main {
   box-shadow: 0 0 2px #b0b0b0b4;
 }
 .task-list li.one-day-left {
-  border: 2px solid #b0b0b0;
-  animation: white-glow-pulse 1.5s ease-in-out infinite;
-}
-@keyframes white-glow-pulse {
-  0%,
-  100% {
-    box-shadow: 0 0 2px #b0b0b0, 0 0 2px #b0b0b0;
-  }
-  50% {
-    box-shadow: 0 0 7px #b0b0b0, 0 0 7px #b0b0b0;
-  }
+  border: 2px solid #ffffff;
+  box-shadow: 0 0 5px #ffffff;
 }
 .task-list li.one-hour-left {
   border: 2px solid red;
-  animation: red-glow-pulse 1.5s ease-in-out infinite;
-}
-@keyframes red-glow-pulse {
-  0%,
-  100% {
-    box-shadow: 0 0 2px red, 0 0 2px red;
-  }
-  50% {
-    box-shadow: 0 0 7px red, 0 0 7px red;
-  }
+  box-shadow: 0 0 5px red;
 }
 .done-checkbox {
   transform: scale(1.3);
@@ -352,7 +336,8 @@ main {
 .show-notification {
   display: none;
 }
-.about-content {
+.about-content,
+.notfound-content {
   background-color: #2b2b2b;
   padding: 2rem;
   border-radius: 5px;
@@ -360,7 +345,8 @@ main {
   font-size: clamp(0.9rem, 2vw, 1.1rem);
   box-shadow: 0 0 5px #b0b0b0b4;
 }
-.about-h1 {
+.about-h1,
+.notfound-h1 {
   text-align: left;
   color: white;
   padding-top: 3rem;
@@ -372,7 +358,8 @@ main {
   margin-top: 0;
   font-size: clamp(1.2rem, 3vw, 2rem);
 }
-.about-content h3 {
+.about-content h3,
+.notfound-content h3 {
   color: #b0b0b0;
   margin-top: 1.5rem;
   font-size: clamp(1rem, 2.5vw, 1.5rem);
@@ -383,6 +370,20 @@ main {
 }
 .about-content li {
   margin-bottom: 0.5rem;
+}
+.notfound-content h1 {
+  text-align: center;
+  color: rgb(255, 0, 0);
+  margin-top: 0;
+  font-size: clamp(1.5rem, 4vw, 2.5rem);
+}
+.notfound-content p {
+  text-align: center;
+  font-size: clamp(1rem, 2.5vw, 1.2rem);
+}
+.notfound-img {
+  display: flex;
+  justify-self: center;
 }
 .back-link {
   text-align: center;
