--- a/public/styles.css
+++ b/public/styles.css
@@ -128,15 +128,16 @@ footer {
   font-size: clamp(0.8rem, 2vw, 1rem);
   padding: 0.1rem 0.6rem;
   border-radius: 5px;
-  transition: box-shadow 0.3s;
-  border: 1.5px solid #b0b0b0;
-  background-color: #676767;
-  box-shadow: 0 0 2px #000000;
+  transition: box-shadow 0.3s, transform 0.3s;
+  border: 2px solid #cdcdcd;
+  background-color: #a3a3a3;
+  box-shadow: 0 0 3px #000000, 0 0 5px #000000b4;
 }
 .nav a:hover {
   box-shadow: 0 0 5px #ffffff;
-  border: 1.5px solid #e6e6e6;
+  border: 2px solid #e6e6e6;
   color: white;
+  transform: scale(1.05);
 }
 footer p {
   margin: 0;
@@ -220,14 +221,14 @@ main {
   color: #000000;
   font-size: clamp(0.8rem, 2vw, 1.2rem);
   user-select: none;
-  border: 1.5px solid #b0b0b0;
-  background-color: #676767;
-  box-shadow: 0 0 2px #000000;
+  border: 2px solid #cdcdcd;
+  background-color: #a3a3a3;
+  box-shadow: 0 0 3px #000000, 0 0 5px #000000b4;
   transition: box-shadow 0.3s;
 }
 .add-task-btn:hover {
   box-shadow: 0 0 5px #ffffff;
-  border: 1.5px solid #e6e6e6;
+  border: 2px solid #e6e6e6;
   color: white;
 }
 .task-list {
